// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClaimCard theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <article
    class="rh-card rh-card--raised rh-card--pad-md rh-claim-card"
    data-authority="qualified"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-claim-card__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scale rh-icon"
          data-icon="scale"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v18"
          />
          <path
            d="m19 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
          />
          <path
            d="m5 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M7 21h10"
          />
        </svg>
        <span
          class="rh-claim-card__id"
        >
          C0041
        </span>
        <span
          class="rh-claim-card__status"
        >
          under review
        </span>
      </span>
      <span
        class="rh-claim-card__badges"
      >
        <span
          class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge"
          data-authority="qualified"
          data-status="qualified"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info rh-icon"
            data-icon="info"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Qualified
          </span>
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <p
        class="rh-claim-card__text"
      >
        Increasing hydrogel stiffness above 5 kPa shortens mean neurite length in cortical cultures.
      </p>
      <dl
        class="rh-claim-card__facts"
      >
        <div
          class="rh-claim-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Type
          </dt>
          <dd
            class="rh-claim-card__fact-value"
          >
            causal
          </dd>
        </div>
        <div
          class="rh-claim-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Scope
          </dt>
          <dd
            class="rh-claim-card__fact-value"
          >
            rat cortical neurons, 3D culture, 24-72 h
          </dd>
        </div>
      </dl>
      <p
        class="rh-claim-card__ceiling"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info rh-icon"
          data-icon="info"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <span>
          <span
            class="rh-text-label"
          >
            Wording ceiling
          </span>
           
          The evidence supports "associated with shorter neurites", not "causes shorter neurites".
        </span>
      </p>
    </div>
    <div
      class="rh-card__footer"
    >
      <div
        class="rh-claim-card__footer"
      >
        <ul
          class="rh-claim-card__support"
        >
          <li
            class="rh-claim-card__support-item"
            data-relation="supports"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-check rh-icon"
                data-icon="circle-check"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m16 9-5.5 5.5L8 12"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                4
              </span>
              <span>
                support
              </span>
            </span>
          </li>
          <li
            class="rh-claim-card__support-item"
            data-relation="contradicts"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-triangle-alert rh-icon"
                data-icon="alert-triangle"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                1
              </span>
              <span>
                contradict
              </span>
            </span>
          </li>
          <li
            class="rh-claim-card__support-item"
            data-relation="qualifies"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                2
              </span>
              <span>
                qualify
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </article>
</div>
`;

exports[`ClaimCard theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <article
    class="rh-card rh-card--raised rh-card--pad-md rh-claim-card"
    data-authority="qualified"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-claim-card__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scale rh-icon"
          data-icon="scale"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v18"
          />
          <path
            d="m19 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
          />
          <path
            d="m5 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M7 21h10"
          />
        </svg>
        <span
          class="rh-claim-card__id"
        >
          C0041
        </span>
        <span
          class="rh-claim-card__status"
        >
          under review
        </span>
      </span>
      <span
        class="rh-claim-card__badges"
      >
        <span
          class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge"
          data-authority="qualified"
          data-status="qualified"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info rh-icon"
            data-icon="info"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Qualified
          </span>
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <p
        class="rh-claim-card__text"
      >
        Increasing hydrogel stiffness above 5 kPa shortens mean neurite length in cortical cultures.
      </p>
      <dl
        class="rh-claim-card__facts"
      >
        <div
          class="rh-claim-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Type
          </dt>
          <dd
            class="rh-claim-card__fact-value"
          >
            causal
          </dd>
        </div>
        <div
          class="rh-claim-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Scope
          </dt>
          <dd
            class="rh-claim-card__fact-value"
          >
            rat cortical neurons, 3D culture, 24-72 h
          </dd>
        </div>
      </dl>
      <p
        class="rh-claim-card__ceiling"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info rh-icon"
          data-icon="info"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <span>
          <span
            class="rh-text-label"
          >
            Wording ceiling
          </span>
           
          The evidence supports "associated with shorter neurites", not "causes shorter neurites".
        </span>
      </p>
    </div>
    <div
      class="rh-card__footer"
    >
      <div
        class="rh-claim-card__footer"
      >
        <ul
          class="rh-claim-card__support"
        >
          <li
            class="rh-claim-card__support-item"
            data-relation="supports"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-check rh-icon"
                data-icon="circle-check"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m16 9-5.5 5.5L8 12"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                4
              </span>
              <span>
                support
              </span>
            </span>
          </li>
          <li
            class="rh-claim-card__support-item"
            data-relation="contradicts"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-triangle-alert rh-icon"
                data-icon="alert-triangle"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                1
              </span>
              <span>
                contradict
              </span>
            </span>
          </li>
          <li
            class="rh-claim-card__support-item"
            data-relation="qualifies"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                2
              </span>
              <span>
                qualify
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </article>
</div>
`;

exports[`ClaimCard theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <article
    class="rh-card rh-card--raised rh-card--pad-md rh-claim-card"
    data-authority="qualified"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-claim-card__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scale rh-icon"
          data-icon="scale"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v18"
          />
          <path
            d="m19 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
          />
          <path
            d="m5 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M7 21h10"
          />
        </svg>
        <span
          class="rh-claim-card__id"
        >
          C0041
        </span>
        <span
          class="rh-claim-card__status"
        >
          under review
        </span>
      </span>
      <span
        class="rh-claim-card__badges"
      >
        <span
          class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge"
          data-authority="qualified"
          data-status="qualified"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info rh-icon"
            data-icon="info"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Qualified
          </span>
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <p
        class="rh-claim-card__text"
      >
        Increasing hydrogel stiffness above 5 kPa shortens mean neurite length in cortical cultures.
      </p>
      <dl
        class="rh-claim-card__facts"
      >
        <div
          class="rh-claim-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Type
          </dt>
          <dd
            class="rh-claim-card__fact-value"
          >
            causal
          </dd>
        </div>
        <div
          class="rh-claim-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Scope
          </dt>
          <dd
            class="rh-claim-card__fact-value"
          >
            rat cortical neurons, 3D culture, 24-72 h
          </dd>
        </div>
      </dl>
      <p
        class="rh-claim-card__ceiling"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info rh-icon"
          data-icon="info"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <span>
          <span
            class="rh-text-label"
          >
            Wording ceiling
          </span>
           
          The evidence supports "associated with shorter neurites", not "causes shorter neurites".
        </span>
      </p>
    </div>
    <div
      class="rh-card__footer"
    >
      <div
        class="rh-claim-card__footer"
      >
        <ul
          class="rh-claim-card__support"
        >
          <li
            class="rh-claim-card__support-item"
            data-relation="supports"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-check rh-icon"
                data-icon="circle-check"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m16 9-5.5 5.5L8 12"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                4
              </span>
              <span>
                support
              </span>
            </span>
          </li>
          <li
            class="rh-claim-card__support-item"
            data-relation="contradicts"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-triangle-alert rh-icon"
                data-icon="alert-triangle"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                1
              </span>
              <span>
                contradict
              </span>
            </span>
          </li>
          <li
            class="rh-claim-card__support-item"
            data-relation="qualifies"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                2
              </span>
              <span>
                qualify
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </article>
</div>
`;

exports[`ClaimCard theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <article
    class="rh-card rh-card--raised rh-card--pad-md rh-claim-card"
    data-authority="qualified"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-claim-card__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scale rh-icon"
          data-icon="scale"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v18"
          />
          <path
            d="m19 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
          />
          <path
            d="m5 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M7 21h10"
          />
        </svg>
        <span
          class="rh-claim-card__id"
        >
          C0041
        </span>
        <span
          class="rh-claim-card__status"
        >
          under review
        </span>
      </span>
      <span
        class="rh-claim-card__badges"
      >
        <span
          class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge"
          data-authority="qualified"
          data-status="qualified"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-info rh-icon"
            data-icon="info"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
          <span
            class="rh-badge__label"
          >
            Qualified
          </span>
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <p
        class="rh-claim-card__text"
      >
        Increasing hydrogel stiffness above 5 kPa shortens mean neurite length in cortical cultures.
      </p>
      <dl
        class="rh-claim-card__facts"
      >
        <div
          class="rh-claim-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Type
          </dt>
          <dd
            class="rh-claim-card__fact-value"
          >
            causal
          </dd>
        </div>
        <div
          class="rh-claim-card__fact"
        >
          <dt
            class="rh-text-label"
          >
            Scope
          </dt>
          <dd
            class="rh-claim-card__fact-value"
          >
            rat cortical neurons, 3D culture, 24-72 h
          </dd>
        </div>
      </dl>
      <p
        class="rh-claim-card__ceiling"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info rh-icon"
          data-icon="info"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <span>
          <span
            class="rh-text-label"
          >
            Wording ceiling
          </span>
           
          The evidence supports "associated with shorter neurites", not "causes shorter neurites".
        </span>
      </p>
    </div>
    <div
      class="rh-card__footer"
    >
      <div
        class="rh-claim-card__footer"
      >
        <ul
          class="rh-claim-card__support"
        >
          <li
            class="rh-claim-card__support-item"
            data-relation="supports"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-check rh-icon"
                data-icon="circle-check"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="m16 9-5.5 5.5L8 12"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                4
              </span>
              <span>
                support
              </span>
            </span>
          </li>
          <li
            class="rh-claim-card__support-item"
            data-relation="contradicts"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-triangle-alert rh-icon"
                data-icon="alert-triangle"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                1
              </span>
              <span>
                contradict
              </span>
            </span>
          </li>
          <li
            class="rh-claim-card__support-item"
            data-relation="qualifies"
          >
            <span
              class="rh-claim-card__support-button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-claim-card__support-count"
              >
                2
              </span>
              <span>
                qualify
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </article>
</div>
`;
